# TSUML-Lab1

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/spaceship/: catboost_model.py  model.py
src/spaceship/catboost_info/: learn_error.tsv  time_left.tsv
src/spaceship/catboost_info/learn/: events.out.tfevents
src/spaceship/data/: result.csv
src/spaceship/model/: logistic_model.pkl
src/spaceship/notebooks/: sample.ipynb
