[project]
name = "spaceship"
version = "0.1.0"
description = ""
authors = [
    {name = "Aleksandr Shadrov",email = "alexshadrov1712@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "logging (>=0.4.9.6,<0.5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
]

[tool.poetry]
packages = [{include = "spaceship", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
